<resources>
    <string name="app_name">ZebFamilyMap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="male"> male</string>
    <string name="female"> female</string>
    <string name="register"> register</string>
    <string name="login" > login</string>
    <string name="email" > email</string>
    <string name="username" > username</string>
    <string name="event_Person_First_Name" />
    <string name="event_Person_Last_Name" />
    <string name="event_Person_Gender" />
    <string name="eventTitleString">Events</string>
    <string name="personTitleString">Family Members</string>
    <string name="listTitle">title of event</string>
</resources>