<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="This is the person activity starting"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:text="@string/event_Person_First_Name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="Test"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:text="@string/event_Person_Last_Name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:text="Test"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="3dp"
            android:text="@string/event_Person_Gender" />

    </LinearLayout>


    <ExpandableListView
        android:id="@+id/personActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>